git-annex (0.20110329) UNRELEASED; urgency=low

  * Amazon S3 is now supported as a special type of remote.
    Warning: Encrypting data before sending it to S3 is not yet supported.
  * Note that Amazon S3 support is not built in by default on Debian yet,
    as hS3 is not packaged.
  * fsck: Ensure that files and directories in .git/annex/objects
    have proper permissions.

 -- Joey Hess <joeyh@debian.org>  Sat, 26 Mar 2011 14:36:16 -0400

git-annex (0.20110328) experimental; urgency=low

  * annex.diskreserve can be given in arbitrary units (ie "0.5 gigabytes")
  * Generalized remotes handling, laying groundwork for remotes that are
    not regular git remotes. (Think Amazon S3.)
  * Provide a less expensive version of `git annex copy --to`, enabled
    via --fast. This assumes that location tracking information is correct,
    rather than contacting the remote for every file.
  * Bugfix: Keys could be received into v1 annexes from v2 annexes, via
    v1 git-annex-shell. This results in some oddly named keys in the v1
    annex. Recognise and fix those keys when upgrading, instead of crashing.

 -- Joey Hess <joeyh@debian.org>  Mon, 28 Mar 2011 10:47:29 -0400

git-annex (0.20110325) experimental; urgency=low

  * Free space checking is now done, for transfers of data for keys
    that have free space metadata. (Notably, not for SHA* keys generated
    with git-annex 0.2x or earlier.) The code is believed to work on
    Linux, FreeBSD, and OSX; check compile-time messages to see if it
    is not enabled for your OS.
  * Add annex.diskreserve config setting, to control how much free space
    to reserve for other purposes and avoid using (defaults to 1 mb).
  * Add --fast flag, that can enable less expensive, but also less thorough
    versions of some commands.
  * fsck: In fast mode, avoid checking checksums.
  * unused: In fast mode, just show all existing temp files as unused,
    and avoid expensive scan for other unused content.