@@ -1,0 +1,10 @@
+This special remote type stores file contents in directory on the system.
+
+One use case for this would be if you have a removable drive, that you
+cannot put a git repository on for some reason, and you want to use it
+to sneakernet files between systems. Just set up both systems to use
+the drive's mountpoint as a directory remote.
+
+Setup example:
+
+	# git annex initremote usbdrive directory=/media/usbdrive/
